Changed to List Of and remove all to finish.